<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_add_tv_word_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/wordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_add_et_word_hint"
        android:maxLines="1"
        android:layout_marginBottom="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_add_tv_translation_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/translationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_add_et_translation_hint"
        android:maxLines="1"
        android:layout_marginBottom="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_add_tv_note_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_add_et_note_hint"
        android:maxLines="2"
        android:layout_marginBottom="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_cancel"
            android:textColor="#625fba"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_add_btn_add"
            android:textColor="#211B20"
            android:background="@drawable/button_primary_bg"
            android:paddingHorizontal="24dp" />

    </LinearLayout>

</LinearLayout>