<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#211B20"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change_tv_current_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_change_et_current_hint"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change_tv_new_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_change_et_new_hint"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change_tv_confirm_label"
        android:textColor="#A2B2FF"
        android:textSize="16sp"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_change_et_confirm_hint"
        android:fontFamily="@font/jura_font_wght"
        android:layout_marginBottom="24dp" />

</LinearLayout>